// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Uploader: Component should render correctly 1`] = `
<styled.div>
  <Component
    id="id"
    label="label"
    name="name"
    onChange={[Function]}
  />
  <Component
    hidden={true}
    id="id"
    name="name"
    onChange={[Function]}
  />
</styled.div>
`;

exports[`Uploader: Component should render with error 1`] = `
<styled.div>
  <Component
    id="id"
    label="label"
    name="name"
    onChange={[Function]}
  />
  <Component
    hidden={true}
    id="id"
    name="name"
    onChange={[Function]}
  />
  <styled.div>
    error
  </styled.div>
</styled.div>
`;
